fix: re-added behind-header height as it is required by other pages
NMS-96

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,3 +49,15 @@ button,
     }
   }
 }
+
+// .video-header is added for the case when the video is displayed in the header
+.video-header {
+  .behind-header,
+  .page-header {
+    background-color: $blackVideo !important;
+  }
+
+  .behind-header {
+    display: none;
+  }
+}
